--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -71,7 +71,7 @@
   <table id = "header" border="0" cellpadding="0" cellspacing="0" style="height:60px; width:100%" align=center>
     <tr>
       <td align=right>
-        mypage
+        <a href="/myPage">myPage</a>
       </td>
     </tr>
   </table>
@@ -137,6 +137,9 @@
                   &nbsp;&nbsp;&nbsp;<a href="index.html"> Home (개발자 모드)</a>
                   <br>
                   &nbsp;&nbsp;&nbsp;<a href="/listPage"> 초기화 (개발자 모드)</a>
+                  <br>
+                  &nbsp;&nbsp;&nbsp;<a href="/SearchPage"> 분석하러 가봅시다!</a>
+
 			</td>
       <!---- 필터 ---->
 
