--- a/src/main/resources/templates/filterPage.html
+++ b/src/main/resources/templates/filterPage.html
@@ -52,7 +52,7 @@
   <table id = "header" border="0" cellpadding="0" cellspacing="0" style="height:60px; width:100%" align=center>
     <tr>
       <td align=right>
-        mypage
+        <a href="/myPage">myPage</a>
       </td>
     </tr>
   </table>
