--- a/src/main/resources/templates/RecommendPage.html
+++ b/src/main/resources/templates/RecommendPage.html
@@ -1,12 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html   lang="en"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        data-layout-decorate="~{samples/layout/sampleLayout}"
+>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<style>
+    *{
+      padding: 0px;
+      margin: 0px;
+    }
+    #header{
+      text-align: center; 
+      background-color: #535353;
+    }
+    #headertext{
+        margin: 7px;
+        display: inline-block;
+        color:  white;
+              vertical-align: middle;
+    }
+    #table{
+      margin: auto;
+    }
+    #footer {
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      padding: 100px 0;
+      text-align: center;
+      color: black;
+      background: #f5f5f7;
+      }
+  </style>
 <body>
-    <h1> shit !!</h1>
+    <!-- header -->
+    <table id = "header" border="0" cellpadding="0" cellspacing="0" style="height:60px; width:100%" align=center>
+        <tr>
+        <td align=right>
+            <a href="/myPage">myPage</a>
+        </td>
+        </tr>
+    </table>
+    <!-- header-->
+
+    <td style="width:755px" align=center valign=top>
+        <br>
+        <table class="table table-bordered">
+            <tr>
+                <th> 이름 </th>
+                <th> 평균 조회수 </th>
+            </tr>
+            <tr th:each = "b : ${general}">
+                <td><a th:href="@{/detailPage(url=${b.ch_url})}"><span th:text = "${b.ch_name}" > 이름 </span></a></td>
+                <td> <span th:text = "${b.adavgview}" > 평균 조회수 </span></td>
+            </tr>
+        </table>
+    </td>
+
+    <td style="width:755px" align=center valign=top>
+        <br>
+        <table class="table table-bordered">
+            <tr>
+                <th> 채널 이름 </th>
+                <th> 유사도 </th>
+            </tr>
+            <tr th:each="a : ${list}">
+                <td><a th:href="@{/detailPage(url=${a.ch_url})}"><span th:text="${a.ch_name}"> 채널 이름 </span></a></td>
+                <td><span th:text="${a.similarity}"> 유사도 </span></td>
+            </tr>
+        </table>
+    </td>
+
+    <!--footer-->
+    <table cellpadding="1" width = "100%" height = "50" bgcolor="white" align="center">
+        <tr>
+        <td align="center">
+            @copyright: 갈라티코스
+        </td>
+        </tr>
+    </table>
+    <!--footer-->
 </body>
 </html>
