--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -10,6 +10,15 @@
     <title>MyPage</title>
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script th:inline="javascript">
+    /*
+      <![CDATA[*/
+        let ggim = /*[[${ggimList}]]*/ 'default';
+        let id;
+        let i = 0;
+      /*]]>
+    */
+  </script>
 <style>
     *{
       padding: 0px;
@@ -37,7 +46,7 @@
       color: black;
       background: #f5f5f7;
       }
-  </style>
+</style>
 <body>
     <!-- header -->
     <table id = "header" border="0" cellpadding="0" cellspacing="0" style="height:60px; width:100%" align=center>
@@ -49,7 +58,27 @@
     </table>
     <!-- header -->
 
-    <h1>마이페이지 랍니다 !!!</h1>
+    <h1>찜 목록</h1>
+    <table class="table table-bordered">
+            
+        <tr th:if="${ggimList.empty}">
+          <img src="https://i.ibb.co/jTHtpG9/empty.png" alt="">
+        </tr>
+        <tr th:unless="${ggimList.empty}">
+          <th> 프로필 사진 </th>
+          <th> 이름 </th>
+        </tr>
+        <tr th:each="ggim,i : ${ggimList}">
+            <td><img th:id = "${i.index}" src='' alt="" width="125" height="125"></td>
+            <td><a th:href="@{/detailPage(url=${ggim.ch_url})}"><span th:text="${ggim.ch_name}"> 이름 </span></a></td>
+            <script>
+                id = '#';
+                id = id + i;
+                $(id).attr('src',ggim[i].img);
+                i = i + 1;
+            </script>
+        </tr>
+      </table>
 
     <!--footer-->
     <table cellpadding="1" width = "100%" height = "50" bgcolor="white" align="center">
