--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -16,6 +16,7 @@
         let ggim = /*[[${ggimList}]]*/ 'default';
         let id;
         let i = 0;
+        let chch;
       /*]]>
     */
   </script>
@@ -67,18 +68,37 @@
         <tr th:unless="${ggimList.empty}">
           <th> 프로필 사진 </th>
           <th> 이름 </th>
+          <th></th>
         </tr>
         <tr th:each="ggim,i : ${ggimList}">
             <td><img th:id = "${i.index}" src='' alt="" width="125" height="125"></td>
             <td><a th:href="@{/detailPage(url=${ggim.ch_url})}"><span th:text="${ggim.ch_name}"> 이름 </span></a></td>
+            <td><button type="button" class="btn btn-light" id="delete" th:value = "${ggim.ch_url}"> 제거 버튼 </button></td>
             <script>
                 id = '#';
                 id = id + i;
                 $(id).attr('src',ggim[i].img);
-                i = i + 1;
+                console.log(ggim[i].ch_url);
+                i += 1;
             </script>
         </tr>
       </table>
+
+      <script>
+        $('#delete').click(function(){
+            if (confirm("찜 목록에서 제거하시겠습니까?")) {
+              var html = "";
+              chch = $(this).val();
+              uri = '/ggimErase'
+              html += '<form name="dataForm" action="'+uri+'" method="post">';
+              html += '<input type="hidden" name="ch_url" value="'+chch+'" />';
+              html += '</form>';
+              
+              $("body").append(html);
+              document.dataForm.submit();
+            }
+          });
+      </script>
 
     <!--footer-->
     <table cellpadding="1" width = "100%" height = "50" bgcolor="white" align="center">
