--- a/src/main/resources/templates/RecommendPage.html
+++ b/src/main/resources/templates/RecommendPage.html
@@ -10,82 +10,282 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <style>
     *{
       padding: 0px;
       margin: 0px;
     }
-    #header{
-      text-align: center; 
-      background-color: #535353;
+    /* header style */
+    
+      ul li img {
+          vertical-align: middle;
+      } /* ul, li, img 정렬 전부 적용하기 */
+  
+      
+      ul li {
+          height: 55px;
+          line-height: 50px;
+      } /* ul, li 바, 텍스트 위치 사이즈 */
+  
+      #header{
+      background-color: #313132;
+      
+      text-size-adjust: 100%;
+      vertical-align: middle;
     }
-    #headertext{
-        margin: 7px;
-        display: inline-block;
-        color:  white;
-              vertical-align: middle;
-    }
+      ul{
+          text-align: center;
+          background-color: #ffff;
+          vertical-align: middle;
+      } /* ul 글자 위치, 그림자, 배경색, 수직 정렬 지정 */
+  
+      li{
+          /*margin: 3px;*/
+          display: inline-block;
+          color:  white;
+          vertical-align: middle;
+      text-align: left;
+      }
+  
+    /* header style */
+  
     #table{
       margin: auto;
     }
-    #footer {
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      padding: 100px 0;
-      text-align: center;
-      color: black;
-      background: #f5f5f7;
+  
+    /* category style*/
+    .category{
+      background-color: 5px solid #ececec;
+      border-top: 5px solid #ececec;
+      border-right: 5px solid #ececec;
+      border-left: 5px solid #ececec;
+      border-bottom: 5px solid #ececec;
+    }
+    /* category style*/
+  
+    /* content style */
+    .content{
+      background-color: 5px solid #ececec;
+      border-top: 5px solid #ececec;
+      border-right: 5px solid #ececec;
+      border-left: 5px solid #ececec;
+      border-bottom: 5px solid #ececec;
+    }
+    /* content style */
+  
+    /* footer style */
+      footer {
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          padding: 0;
+          text-align: center;
+          color: white;
+          background: #f5f5f7;  
+          bottom: 0;
+  
+  
+          background:url('https://farm9.staticflickr.com/8760/17195790401_ceeeafcddb_o.jpg');
+          background-size:cover;
+          font-family: 'Cabin Condensed', sans-serif;
+          display:flex;
+          flex-direction:column;
+          justify-content:center;
+          align-items:center;
       }
-  </style>
+  
+  
+              
+      svg{
+          font-weight:bold;max-width:600px;height:auto;
+      }
+  
+      .table_2{
+          border-spacing: 10px;	  
+          width: 100%;
+          color: black;
+          border-top : 2px solid white;
+          border-right : none;
+          border-left : none;
+          border-bottom : none;
+      }
+  
+    /* footer style */
+</style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script th:inline = "javascript">
+    /*
+    <![CDATA[*/
+    let ordin = /*[[${general}]]*/ 'default';
+    let i = 0;
+    let id;
+    /*]]>
+    */
+</script>
 <body>
     <!-- header -->
-    <table id = "header" border="0" cellpadding="0" cellspacing="0" style="height:60px; width:100%" align=center>
+    <div id='header'>
+        <table  border = "0" cellpadding="1" cellspacing="1" width = "100%">
         <tr>
-        <td align=right>
-            <a href="/myPage">myPage</a>
-        </td>
+            <td align="left">
+            &nbsp;&nbsp;&nbsp;<a href="index.html"><img src="https://i.ibb.co/4tfcjFQ/logo.png"> </a>
+            </td>
+            <td align="right">
+                <a href="/listPage"><img src="https://i.ibb.co/4MZLzwb/Search-button.png" onmouseover="this.src='https://i.ibb.co/8rfcfpq/Search-button.png'" onmouseout="this.src='https://i.ibb.co/4MZLzwb/Search-button.png'"></a>
+                <a href="/SearchPage"><img src="https://i.ibb.co/7GwrDPf/Recommendation-button.png" onmouseover="this.src='https://i.ibb.co/zbsBBWf/Recommendation-button.png'" onmouseout="this.src='https://i.ibb.co/7GwrDPf/Recommendation-button.png'"></a>
+                <a href="/myPage" align = right><img src="https://i.ibb.co/Sd9b5wJ/Mypage-button.png" onmouseover="this.src='https://i.ibb.co/5TFsZ4m/Mypage-button.png'" onmouseout="this.src='https://i.ibb.co/Sd9b5wJ/Mypage-button.png'"></a>
+            </td>
         </tr>
+    
+        </table>
+    </div>
+    <!-- header -->
+    <br>
+    <br>
+    <br>
+    <!-- Main -->
+    <table id = "table" border="0" cellpadding="1" cellspacing="1" style="height:600px; width:1024px" align=center>
+        <tbody>
+            <tr>
+                <td style="width:255px" valign=top bgcolor="#ececec"  class = 'category' >&nbsp;
+                    <br>
+                    <p align=Center size=9><img src="https://i.ibb.co/f2ghtBm/Recommendation.png"></p>
+                    <br>
+                    &nbsp;&nbsp;&nbsp;키워드를 입력해주세요
+                    <br>
+                    <form action="/recommend" method="POST" border="1">
+                        &nbsp;&nbsp;&nbsp;<input type="text" name = "keyword" placeholder="">
+                        <br>
+                        <br>
+                        &nbsp;&nbsp;&nbsp;<input type="submit" value=" 추천 " />
+                    </form>
+                </td>
+                <td class="content" style="width:755px" align="center"  valign=top>
+                    <br>
+                    <h2> 키워드들을 광고한 채널들 </h2>
+                    <br>
+                    <table class="ordinary" border="0">
+                        <tr>   
+                            <th> 채널 </th>
+                            <th width = "10px"></th>
+                            <th> 이름 </th>
+                            <th width = "10px"></th>
+                            <th> 평균 조회수 </th>
+                        </tr>
+                        <tr th:each = "ordin,i : ${general}">
+                            <td><a th:href="@{/detailPage(url=${ordin.ch_url})}"><img th:id = "${i.index}" src="" alt=""></a></td>
+                            <td></td>
+                            <td align="center"><a th:href="@{/detailPage(url=${ordin.ch_url})}"><span th:text = "${ordin.ch_name}" > 이름 </span></a></td>
+                            <td></td>
+                            <td align="center"> <span th:text = "${ordin.adavgview}" > 평균 조회수 </span></td>
+                            <script>
+                                id = '#';
+                                id = id + i;
+                                $(id).attr('src',ordin[i].img);
+                                i = i + 1;
+                            </script>
+                        </tr>
+                    </table>
+
+                    <br>
+                    <h2> 입력한 키워드들을 tf-idf를 통해서 추천한 채널들 </h2>
+                    <br>
+                    <table class="recommend" border="0">
+                        <tr>
+                            <th> 이름 </th>
+                            <th width = "10px"></th>
+                            <th> 유사도 </th>
+                        </tr>
+                        <tr th:each="recom,i : ${list}">
+                            <td align="center"><a th:href="@{/detailPage(url=${recom.ch_url})}"><span th:text="${recom.ch_name}"> 채널 이름 </span></a></td>
+                            <td></td>
+                            <td align="center"><span th:text="${recom.similarity}"> 유사도 </span></td>
+                        </tr>
+                    </table>
+                    <br>
+                    <br>
+
+
+                </td>
+            </tr>
+        </tbody>
     </table>
-    <!-- header-->
-
-    <td style="width:755px" align=center valign=top>
-        <br>
-        <table class="table table-bordered">
-            <tr>
-                <th> 이름 </th>
-                <th> 평균 조회수 </th>
-            </tr>
-            <tr th:each = "b : ${general}">
-                <td><a th:href="@{/detailPage(url=${b.ch_url})}"><span th:text = "${b.ch_name}" > 이름 </span></a></td>
-                <td> <span th:text = "${b.adavgview}" > 평균 조회수 </span></td>
-            </tr>
-        </table>
-    </td>
-
-    <td style="width:755px" align=center valign=top>
-        <br>
-        <table class="table table-bordered">
-            <tr>
-                <th> 채널 이름 </th>
-                <th> 유사도 </th>
-            </tr>
-            <tr th:each="a : ${list}">
-                <td><a th:href="@{/detailPage(url=${a.ch_url})}"><span th:text="${a.ch_name}"> 채널 이름 </span></a></td>
-                <td><span th:text="${a.similarity}"> 유사도 </span></td>
-            </tr>
-        </table>
-    </td>
+    <!-- Main -->
+    <br>
+    <br>
+    <br>
 
     <!--footer-->
-    <table cellpadding="1" width = "100%" height = "50" bgcolor="white" align="center">
-        <tr>
-        <td align="center">
-            @copyright: 갈라티코스
-        </td>
-        </tr>
-    </table>
+    <footer>
+        <br>
+        Copyright ⓒ 2021 team Galaticos. 모든 권리 보유. <br>
+        사업자 등록번호 : 120 81 71278 | 통신판매업신고번호 : 제 2021 - 서울중구 - 00961호 | <br>
+        대표이사 : KIMPARK JUNGSEO | 주소 : 서울특별시 중구 다동 88 | <br>
+        대표전화 : 010 - 3237 - 0219 | 팩스 : 02 - 490 - 7392 <br>
+    
+    
+        <svg viewbox="0 0 100 20">
+            <defs>
+              <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
+                <stop offset="5%" stop-color="#326384"/>
+                <stop offset="95%" stop-color="#123752"/>
+              </linearGradient>
+              <pattern id="wave" x="0" y="0" width="120" height="20" patternUnits="userSpaceOnUse">
+                <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)"> 
+                  <animateTransform
+                      attributeName="transform"
+                      begin="0s"
+                      dur="1.5s"
+                      type="translate"
+                      from="0,0"
+                      to="40,0"
+                      repeatCount="indefinite" />
+                </path>
+              </pattern>
+            </defs>
+            <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="0.6">UFORA</text>
+            <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#gradient)" fill-opacity="0.1">UFORA</text>
+          </svg>
+          <div style="width:100vw; height: 30vh; display: flex; align-items: center; text-align:center;">
+            <div style="text-align:center; vertical-align: middle; margin: 0 auto;">
+                <table class="table_2">
+                    <FORM>
+                        <tr>
+                            <th align=center>[백엔드]</th>
+                            <th align=center>[데이터분석]</th>
+                            <th align=center>[데이터분석]</th>
+                            <th align=center>[프론트엔드]</th>
+                        </tr>
+                        <tr>
+                            <td align=center valign=top>
+                                박영상<br>
+                                010.3237.0219<br>
+                                dudtkd0219@gmail.com<br>
+                                </td>
+                                <td align=center valign=top>
+                                    정광의<br>
+                                    010.6788.1124<br>
+                                    jeongke26@naver.com<br>
+                                </td>
+                                <td align=center valign=top>
+                                    김태연<br>
+                                    010.7127.8378<br>
+                                    xodus0706@gmail.com<br>
+                                </td>
+                                <td align=center valign=top>
+                                    서예지<br>
+                                    010.6353.1401<br>
+                                    814askl@naver.com<br>
+                                </td>
+                        </tr>
+                    </FORM>
+                </table>
+            </div>
+        </div>
+    
+        <br>
+        <br>
+    </footer>
     <!--footer-->
 </body>
 </html>
