--- a/src/main/resources/templates/filterPage.html
+++ b/src/main/resources/templates/filterPage.html
@@ -14,6 +14,27 @@
       let channel = /*[[${list}]]*/ 'default';
       let id;
       let i = 0;
+      function checkOnlyOne(element) {
+  
+        const checkboxes = document.getElementsByName("category");
+        
+        checkboxes.forEach((cb) => {
+          cb.checked = false;
+        })
+        
+        element.checked = true;
+      }
+      function checkOnlyOne1(element) {
+
+        const subList = document.getElementsByName("sub");
+        
+
+        subList.forEach((cb) => {
+          cb.checked = false;
+        })
+        
+        element.checked = true;
+      }
     /*]]>
   */
 </script>
@@ -22,165 +43,331 @@
     padding: 0px;
     margin: 0px;
   }
-  #header{
-    text-align: center; 
-    background-color: #535353;
+  /* header style */
+  
+	ul li img {
+		vertical-align: middle;
+	} /* ul, li, img 정렬 전부 적용하기 */
+
+	
+	ul li {
+		height: 55px;
+		line-height: 50px;
+	} /* ul, li 바, 텍스트 위치 사이즈 */
+
+	#header{
+    background-color: #313132;
+    
+    text-size-adjust: 100%;
+    vertical-align: middle;
   }
-  #headertext{
-      margin: 7px;
-      display: inline-block;
-      color:  white;
-			vertical-align: middle;
-  }
+	ul{
+		text-align: center;
+		background-color: #ffff;
+		vertical-align: middle;
+	} /* ul 글자 위치, 그림자, 배경색, 수직 정렬 지정 */
+
+	li{
+		/*margin: 3px;*/
+		display: inline-block;
+		color:  white;
+		vertical-align: middle;
+    text-align: left;
+	}
+
+  /* header style */
+
   #table{
     margin: auto;
   }
-  #footer {
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	padding: 100px 0;
-	text-align: center;
-	color: black;
-	background: #f5f5f7;
+
+  /* category style*/
+  .category{
+    background-color: 5px solid #ececec;
+    border-top: 5px solid #ececec;
+    border-right: 5px solid #ececec;
+    border-left: 5px solid #ececec;
+    border-bottom: 5px solid #ececec;
+  }
+  /* category style*/
+
+  /* content style */
+  .content{
+    background-color: 5px solid #ececec;
+    border-top: 5px solid #ececec;
+    border-right: 5px solid #ececec;
+    border-left: 5px solid #ececec;
+    border-bottom: 5px solid #ececec;
+  }
+  /* content style */
+
+  /* footer style */
+	footer {
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		padding: 0;
+		text-align: center;
+		color: white;
+		background: #f5f5f7;  
+		bottom: 0;
+
+
+		background:url('https://farm9.staticflickr.com/8760/17195790401_ceeeafcddb_o.jpg');
+		background-size:cover;
+		font-family: 'Cabin Condensed', sans-serif;
+		display:flex;
+		flex-direction:column;
+		justify-content:center;
+		align-items:center;
 	}
+
+
+			
+	svg{
+		font-weight:bold;max-width:600px;height:auto;
+	}
+
+	.table_2{
+		border-spacing: 10px;	  
+		width: 100%;
+		color: black;
+		border-top : 2px solid white;
+		border-right : none;
+		border-left : none;
+		border-bottom : none;
+	}
+
+  /* footer style */
 </style>
 </head>
 <body>
 
   <!-- header -->
-  <table id = "header" border="0" cellpadding="0" cellspacing="0" style="height:60px; width:100%" align=center>
-    <tr>
-      <td align=right>
-        <a href="/myPage">myPage</a>
-      </td>
-    </tr>
-  </table>
+  <div id='header'>
+    <table  border = "0" cellpadding="1" cellspacing="1" width = "100%">
+      <tr>
+        <td align="left">
+          &nbsp;&nbsp;&nbsp;<a href="index.html"><img src="https://i.ibb.co/4tfcjFQ/logo.png"> </a>
+        </td>
+        <td align="right">
+          <a href="/listPage"><img src="https://i.ibb.co/4MZLzwb/Search-button.png" onmouseover="this.src='https://i.ibb.co/8rfcfpq/Search-button.png'" onmouseout="this.src='https://i.ibb.co/4MZLzwb/Search-button.png'"></a>
+          <a href="/SearchPage"><img src="https://i.ibb.co/7GwrDPf/Recommendation-button.png" onmouseover="this.src='https://i.ibb.co/zbsBBWf/Recommendation-button.png'" onmouseout="this.src='https://i.ibb.co/7GwrDPf/Recommendation-button.png'"></a>
+          <a href="/myPage" align = right><img src="https://i.ibb.co/Sd9b5wJ/Mypage-button.png" onmouseover="this.src='https://i.ibb.co/5TFsZ4m/Mypage-button.png'" onmouseout="this.src='https://i.ibb.co/Sd9b5wJ/Mypage-button.png'"></a>
+        </td>
+      </tr>
+  
+    </table>
+	</div>
   <!-- header -->
+  <br>
+  <br>
+  <br>
 
   <!-- main -->
   <table id = "table" border="0" cellpadding="1" cellspacing="1" style="height:600px; width:1024px" align=center>
     <tbody>
       <tr>
-        <td style="width:255px" valign=top bgcolor="lightgray">&nbsp;
+
+      <!---- 필터 ---->
+			<td style="width:255px" valign=top bgcolor="#ececec"  class = 'category'>&nbsp;
+			  <br>
+        <p align=Center size=9><img src="https://i.ibb.co/TYG3bpM/Search.png"></p>
+        <form action="/filterPage">
+          <!--카테고리 선택-->
           <br>
-          <p align=Center size=9><b>Filter</b></p>
-          <form action="/filterPage">
-            <!--카테고리 선택-->
-            <div>
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="음악" onclick='checkOnlyOne(this)'>음악
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="노하우/스타일" onclick='checkOnlyOne(this)'>노하우/스타일
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="뉴스/정치" onclick='checkOnlyOne(this)'>뉴스/정치
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="코미디" onclick='checkOnlyOne(this)'>코미디
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="자동차" onclick='checkOnlyOne(this)'>자동차
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="인물/블로그" onclick='checkOnlyOne(this)'>인물/블로그
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="스포츠" onclick='checkOnlyOne(this)'>스포츠
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="엔터테이먼트" onclick='checkOnlyOne(this)'>엔터테이먼트
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="동물" onclick='checkOnlyOne(this)'>동물
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="여행/이벤트" onclick='checkOnlyOne(this)'>여행/이벤트
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="교육" onclick='checkOnlyOne(this)'>교육
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="영화/애니메이션" onclick='checkOnlyOne(this)'>영화/애니메이션
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="게임" onclick='checkOnlyOne(this)'>게임
-              <br>
-              </div>
-              <!--카테고리 선택-->
-      
-              <!-- 구독자 수 선택-->
-              <div>
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="100000" onclick='checkOnlyOne1(this)'>10만 이하
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="1000000" onclick='checkOnlyOne1(this)'>10만 ~ 100만
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="10000000" onclick='checkOnlyOne1(this)'>100만 ~ 1000만
-              <br>
-              &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="100000000" onclick='checkOnlyOne1(this)'>1000만 이상
-              </div>
-              <!-- 구독자 수 선택 -->
+          &nbsp;<strong> 카테고리 </strong>
+          <div>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="음악" onclick='checkOnlyOne(this)'>음악
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="submit" value="GO!" />
-          </form>
-                        &nbsp;&nbsp;&nbsp;<a href="index.html"> Home (개발자 모드)</a>
-                        <br>
-                        &nbsp;&nbsp;&nbsp;<a href="/listPage"> 초기화 (개발자 모드)</a>
-        </td>
-        <!---- 필터링 바  ---->
-
-        <!--   내용들 -->
-        <td style="width:755px" align=center valign=top>
-
-          <br>
-          <!--   출력 내용 -->
-          <table class="table table-bordered">
-            <tr>
-                <th> 채널 url </th>
-                <th> 채널 이름 </th>
-                <th> 구독자 수 </th>
-                <th> 카테고리 </th>
-            </tr>
-            <tr th:each="channel,i : ${list}">
-                <td><img th:id = "${i.index}" src='' alt=""></td>
-                <td><a th:href="@{/detailPage(url=${channel.ch_url})}"><span th:text="${channel.ch_name}">채널 이름 </span></a></td>
-                <td><span th:text="${channel.sub}"> 구독자 수 </span></td>
-                <td><span th:text="${channel.category}"> 카테고리 </span></td>
-                <script>
-                  id = '#';
-                  id = id + i;
-                  $(id).attr('src',channel[i].img);
-                  i = i + 1;
-                </script>
-            </tr>
-          </table>
-          <!--   출력 내용 -->
-                
-          <!-- 게시판 하단의 페이징 버튼 -->
-          <div class="box-footer clearfix">
-            <ul class="pagination pagination-sm no-margin pull-right">
-            
-              <b th:if="${FilterMaker.prev} == true">
-                <a th:href="@{/filterPage(page=${FilterMaker.startPage}-1,perPageNum=${FilterMaker.cvo.perPageNum})}">&laquo;</a>
-              </b>
-              
-              <b th:each="idx,iterStat : ${#numbers.sequence(FilterMaker.startPage,FilterMaker.endPage)}"  th:classappend="${FilterMaker.cvo.page} == ${idx} ? active : null">
-                <a th:href="@{/filterPage(page=${idx},perPageNum=${FilterMaker.cvo.perPageNum})}" th:text="${idx}"></a>
-              </b>
-              
-              <b th:if="${FilterMaker.next} == true and ${FilterMaker.endPage > 0}">
-                <a th:href="@{/filterPage(page=${FilterMaker.endPage}+1,perPageNum=${FilterMaker.cvo.perPageNum})}">&raquo;</a>
-              </b>
-            
-            </ul>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="노하우/스타일" onclick='checkOnlyOne(this)'>노하우/스타일
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="뉴스/정치" onclick='checkOnlyOne(this)'>뉴스/정치
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="코미디" onclick='checkOnlyOne(this)'>코미디
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="자동차" onclick='checkOnlyOne(this)'>자동차
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="인물/블로그" onclick='checkOnlyOne(this)'>인물/블로그
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="스포츠" onclick='checkOnlyOne(this)'>스포츠
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="엔터테이먼트" onclick='checkOnlyOne(this)'>엔터테이먼트
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="동물" onclick='checkOnlyOne(this)'>동물
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="여행/이벤트" onclick='checkOnlyOne(this)'>여행/이벤트
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="교육" onclick='checkOnlyOne(this)'>교육
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="영화/애니메이션" onclick='checkOnlyOne(this)'>영화/애니메이션
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="게임" onclick='checkOnlyOne(this)'>게임
+            <br>
           </div>
-          <!-- 게시판 하단의 페이징 버튼 -->
+          <!--카테고리 선택-->
 
-        </td>
-        <!--   내용들 -->
+          <!-- 구독자 수 선택-->
+          <br>
+          &nbsp;<strong> 구독자</strong>
+          <div>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="100000" onclick='checkOnlyOne1(this)'>10만 이하
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="1000000" onclick='checkOnlyOne1(this)'>10만 ~ 100만
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="10000000" onclick='checkOnlyOne1(this)'>100만 ~ 1000만
+            <br>
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="100000000" onclick='checkOnlyOne1(this)'>1000만 이상
+          </div>
+          <!-- 구독자 수 선택 -->
+          <br>
+          &nbsp;&nbsp;&nbsp;<input type="submit" value="검색" />
+        </form>
+			</td>
+      <!---- 필터 ---->
+
+      <!-- 채널들 -->
+      <td style="width:755px" align=center valign=top class="content">
+
+        <br>
+        <!--   출력 내용 -->
+        <table class="table table-bordered">
+          <tr height="50px">
+              <th> 채널 url </th>
+              <th width="10px"></th>
+              <th> 채널 이름 </th>
+              <th width="10px"></th>
+              <th> 구독자 수 </th>
+              <th width="10px"></th>
+              <th> 카테고리 </th>
+              <th width="10px"></th>
+              <th> 광고 수 </th>
+              <th width="10px"></th>
+              <th> 찜 </th>
+          </tr>
+          <tr th:each="channel,i : ${list}">
+              <td><a th:href="@{/detailPage(url=${channel.ch_url})}"><img th:id = "${i.index}" src='' alt=""></a></td>
+              <td></td>
+              <td align="center"><span th:text="${channel.ch_name}">채널 이름 </span></td>
+              <td></td>
+              <td align="center"><span th:text="${channel.sub}"> 구독자 수 </span></td>
+              <td></td>
+              <td align="center"><span th:text="${channel.category}"> 카테고리 </span></td>
+              <td></td>
+              <td align="center"><a th:href="@{/detailPage(url=${channel.ch_url})}"><span th:text="${channel.adcount}"> 광고 수 </span></a></td>
+              <td></td>
+              <td align="center"><span th:value = "${channel.ch_url}"></span></td>
+              
+              <script>
+                id = '#';
+                id = id + i;
+                $(id).attr('src',channel[i].img);
+                i = i + 1;
+              </script>
+          </tr>
+        </table>
+        <!--   출력 내용 -->
+              
+        <!-- 게시판 하단의 페이징 버튼 -->
+        <div class="box-footer clearfix">
+          <ul class="pagination pagination-sm no-margin pull-right">
+          
+            <b th:if="${FilterMaker.prev} == true">
+              <a th:href="@{/filterPage(page=${FilterMaker.startPage}-1,perPageNum=${FilterMaker.cvo.perPageNum})}">&laquo;</a>
+            </b>
+            
+            <b th:each="idx,iterStat : ${#numbers.sequence(FilterMaker.startPage,FilterMaker.endPage)}"  th:classappend="${FilterMaker.cvo.page} == ${idx} ? active : null">
+              <a th:href="@{/filterPage(page=${idx},perPageNum=${FilterMaker.cvo.perPageNum})}" th:text="${idx}"></a>
+            </b>
+            
+            <b th:if="${FilterMaker.next} == true and ${FilterMaker.endPage > 0}">
+              <a th:href="@{/filterPage(page=${FilterMaker.endPage}+1,perPageNum=${FilterMaker.cvo.perPageNum})}">&raquo;</a>
+            </b>
+          
+          </ul>
+        </div>
+        <!-- 게시판 하단의 페이징 버튼 -->
+        <br>
+      </td>
+      <!-- 채널들 -->
       </tr>
     </tbody>
   </table>
   <!-- main -->
-
+  <br>
+  <br>
+  <br>
   <!--footer-->
-  <table cellpadding="1" width = "100%" height = "50" bgcolor="white" align="center">
-    <tr>
-      <td align="center">
-        @copyright: 갈라티코스
-      </td>
-    </tr>
-  </table>
+  <footer>
+    <br>
+    Copyright ⓒ 2021 team Galaticos. 모든 권리 보유. <br>
+    사업자 등록번호 : 120 81 71278 | 통신판매업신고번호 : 제 2021 - 서울중구 - 00961호 | <br>
+    대표이사 : KIMPARK JUNGSEO | 주소 : 서울특별시 중구 다동 88 | <br>
+    대표전화 : 010 - 3237 - 0219 | 팩스 : 02 - 490 - 7392 <br>
+  
+  
+    <svg viewbox="0 0 100 20">
+      <defs>
+        <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
+        <stop offset="5%" stop-color="#326384"/>
+        <stop offset="95%" stop-color="#123752"/>
+        </linearGradient>
+        <pattern id="wave" x="0" y="0" width="120" height="20" patternUnits="userSpaceOnUse">
+        <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)"> 
+          <animateTransform
+            attributeName="transform"
+            begin="0s"
+            dur="1.5s"
+            type="translate"
+            from="0,0"
+            to="40,0"
+            repeatCount="indefinite" />
+        </path>
+        </pattern>
+      </defs>
+      <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="0.6">UFORA</text>
+      <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#gradient)" fill-opacity="0.1">UFORA</text>
+      </svg>
+      <div style="width:100vw; height: 30vh; display: flex; align-items: center; text-align:center;">
+      <div style="text-align:center; vertical-align: middle; margin: 0 auto;">
+        <table class="table_2">
+          <FORM>
+            <tr>
+              <th align=center>[백엔드]</th>
+              <th align=center>[데이터분석]</th>
+              <th align=center>[데이터분석]</th>
+              <th align=center>[프론트엔드]</th>
+            </tr>
+            <tr>
+              <td align=center valign=top>
+                박영상<br>
+                010.3237.0219<br>
+                dudtkd0219@gmail.com<br>
+                </td>
+                <td align=center valign=top>
+                  정광의<br>
+                  010.6788.1124<br>
+                  jeongke26@naver.com<br>
+                </td>
+                <td align=center valign=top>
+                  김태연<br>
+                  010.7127.8378<br>
+                  xodus0706@gmail.com<br>
+                </td>
+                <td align=center valign=top>
+                  서예지<br>
+                  010.6353.1401<br>
+                  814askl@naver.com<br>
+                </td>
+            </tr>
+          </FORM>
+        </table>
+      </div>
+    </div>
+  
+    <br>
+    <br>
+  </footer>
   <!--footer-->
 </body>
 </html>
