--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -21,93 +21,304 @@
     */
   </script>
 <style>
-    *{
-      padding: 0px;
-      margin: 0px;
-    }
+  *{
+    padding: 0px;
+    margin: 0px;
+  }
+  /* header style */
+  
+    ul li img {
+        vertical-align: middle;
+    } /* ul, li, img 정렬 전부 적용하기 */
+
+    
+    ul li {
+        height: 55px;
+        line-height: 50px;
+    } /* ul, li 바, 텍스트 위치 사이즈 */
+
     #header{
-      text-align: center; 
-      background-color: #535353;
-    }
-    #headertext{
-        margin: 7px;
+    background-color: #313132;
+    
+    text-size-adjust: 100%;
+    vertical-align: middle;
+  }
+    ul{
+        text-align: center;
+        background-color: #ffff;
+        vertical-align: middle;
+    } /* ul 글자 위치, 그림자, 배경색, 수직 정렬 지정 */
+
+    li{
+        /*margin: 3px;*/
         display: inline-block;
         color:  white;
-              vertical-align: middle;
+        vertical-align: middle;
+    text-align: left;
     }
-    #table{
-      margin: auto;
+
+  /* header style */
+
+  #table{
+    margin: auto;
+  }
+
+  /* category style*/
+  .category{
+    background-color: 5px solid #ececec;
+    border-top: 5px solid #ececec;
+    border-right: 5px solid #ececec;
+    border-left: 5px solid #ececec;
+    border-bottom: 5px solid #ececec;
+  }
+  /* category style*/
+
+  /* content style */
+  .content{
+    background-color: 5px solid #ececec;
+    border-top: 5px solid #ececec;
+    border-right: 5px solid #ececec;
+    border-left: 5px solid #ececec;
+    border-bottom: 5px solid #ececec;
+  }
+  /* content style */
+
+  /* footer style */
+    footer {
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        padding: 0;
+        text-align: center;
+        color: white;
+        background: #f5f5f7;  
+        bottom: 0;
+
+
+        background:url('https://farm9.staticflickr.com/8760/17195790401_ceeeafcddb_o.jpg');
+        background-size:cover;
+        font-family: 'Cabin Condensed', sans-serif;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
     }
-    #footer {
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      padding: 100px 0;
-      text-align: center;
-      color: black;
-      background: #f5f5f7;
-      }
+
+
+            
+    svg{
+        font-weight:bold;max-width:600px;height:auto;
+    }
+
+    .table_2{
+        border-spacing: 10px;	  
+        width: 100%;
+        color: black;
+        border-top : 2px solid white;
+        border-right : none;
+        border-left : none;
+        border-bottom : none;
+    }
+
+  /* footer style */
 </style>
 <body>
     <!-- header -->
-    <table id = "header" border="0" cellpadding="0" cellspacing="0" style="height:60px; width:100%" align=center>
-        <tr>
-            <td align=right>
-                <a href="/listPage">리스트 채널 조회</a>
-            </td>
-        </tr>
-    </table>
-    <!-- header -->
-
-    <h1>찜 목록</h1>
-    <table class="table table-bordered">
-            
-        <tr th:if="${ggimList.empty}">
-          <img src="https://i.ibb.co/jTHtpG9/empty.png" alt="">
-        </tr>
-        <tr th:unless="${ggimList.empty}">
-          <th> 프로필 사진 </th>
-          <th> 이름 </th>
-          <th></th>
-        </tr>
-        <tr th:each="ggim,i : ${ggimList}">
-            <td><img th:id = "${i.index}" src='' alt="" width="125" height="125"></td>
-            <td><a th:href="@{/detailPage(url=${ggim.ch_url})}"><span th:text="${ggim.ch_name}"> 이름 </span></a></td>
-            <td><button type="button" class="btn btn-light" id="delete" th:value = "${ggim.ch_url}"> 제거 버튼 </button></td>
-            <script>
-                id = '#';
-                id = id + i;
-                $(id).attr('src',ggim[i].img);
-                console.log(ggim[i].ch_url);
-                i += 1;
-            </script>
-        </tr>
+    <div id='header'>
+      <table  border = "0" cellpadding="1" cellspacing="1" width = "100%">
+      <tr>
+          <td align="left">
+          &nbsp;&nbsp;<a href="index.html">
+            <img src="https://i.ibb.co/4tfcjFQ/logo.png"> 
+          </a> 
+          </td>
+          <td align="right">
+            <a href="/listPage"><img src="https://i.ibb.co/4MZLzwb/Search-button.png" onmouseover="this.src='https://i.ibb.co/8rfcfpq/Search-button.png'" onmouseout="this.src='https://i.ibb.co/4MZLzwb/Search-button.png'"></a>
+            <a href="/SearchPage"><img src="https://i.ibb.co/7GwrDPf/Recommendation-button.png" onmouseover="this.src='https://i.ibb.co/zbsBBWf/Recommendation-button.png'" onmouseout="this.src='https://i.ibb.co/7GwrDPf/Recommendation-button.png'"></a>
+            <a href="/myPage" align = right><img src="https://i.ibb.co/Sd9b5wJ/Mypage-button.png" onmouseover="this.src='https://i.ibb.co/5TFsZ4m/Mypage-button.png'" onmouseout="this.src='https://i.ibb.co/Sd9b5wJ/Mypage-button.png'"></a>
+          </td>
+      </tr>
+  
       </table>
+      </div>
+  <!-- header -->
 
-      <script>
-        $('#delete').click(function(){
-            if (confirm("찜 목록에서 제거하시겠습니까?")) {
-              var html = "";
-              chch = $(this).val();
-              uri = '/ggimErase'
-              html += '<form name="dataForm" action="'+uri+'" method="post">';
-              html += '<input type="hidden" name="ch_url" value="'+chch+'" />';
-              html += '</form>';
-              
-              $("body").append(html);
-              document.dataForm.submit();
-            }
-          });
-      </script>
+  <br>
+    <br>
+    <br>
 
-    <!--footer-->
-    <table cellpadding="1" width = "100%" height = "50" bgcolor="white" align="center">
-        <tr>
-            <td align="center">
-                @copyright: 갈라티코스
-            </td>
-        </tr>
+    <!-- Main -->
+    <table id = "table" border="0" cellpadding="1" cellspacing="1" style="height:600px; width:1024px" align=center>
+        <tbody>
+            <tr>
+                <td style="width:255px" valign=top bgcolor="#ececec"  class = 'category' >&nbsp;
+                    <br>
+                    <p align=Center size=9><img src="https://i.ibb.co/tXftLwj/Mypage.png"></p>
+                    <br>
+                    &nbsp;&nbsp;&nbsp;<strong>>> 찜 목록</strong>
+                    <br>
+                    <br>
+                    &nbsp;&nbsp;&nbsp;<a href="/modify">개인 정보 수정</a>
+                    <br>
+                    <br>
+                    &nbsp;&nbsp;&nbsp;<button type = "button" id="logout"> 로그아웃 </button>
+      
+                </td>
+                <td class="content" style="width:755px" align="center"  valign=top>
+                  <br>
+                  <table align=center valign=top border="0">
+            
+                    <tr th:if="${ggimList.empty}" height="50px">
+                      <img src="https://i.ibb.co/QdXBPC3/empty.png" alt="" width="80%" height="80%">
+                    </tr>
+                    <tr th:unless="${ggimList.empty}" height="50px">
+                      <th width = "130px"> 썸네일 </th>
+                      <th width = "10px">&nbsp;</th>
+                      <th width = "10px" align="center"> 채널 이름 </th>
+                      <th width = "10px">&nbsp;</th>
+                      <th width = "100px" align="center"> 구독자 수 </th>
+                      <th width = "10px">&nbsp;</th>
+                      <th width = "100px" align="center"> 카테고리 </th>
+                      <th width = "10px">&nbsp;</th>
+                      <th width = "100px" align="center"> 광고 개수 </th>
+                      <th width = "10px">&nbsp;</th>
+                      <th width = "50px" align="center"> 찜 </th>
+                    </tr>
+                    <tr th:each="ggim,i : ${ggimList}">
+                      <td><a th:href="@{/detailPage(url=${ggim.ch_url})}"><img th:id = "${i.index}" src='' alt="" width="125" height="125"></a></td> 
+                      <td>&nbsp;</td>
+                      <td align="center"><span th:text="${ggim.ch_name}"> 채널 이름 </span></td>
+                      <td>&nbsp;</td>
+                      <td align="center"><span th:text="${ggim.sub}"> 구독자 수 </span></td>
+                      <td>&nbsp;</td>
+                      <td align="center"><span th:text="${ggim.category}"> 카테고리 </span></td>
+                      <td>&nbsp;</td>
+                      <td align="center"><a th:href="@{/detailPage(url=${ggim.ch_url})}"><span th:text="${ggim.adcount}"> 광고 개수 </span></a></td>
+                      <td></td>
+                        <td align="center"><button type="button" class="btn btn-light" id="delete" th:value = "${ggim.ch_url}"> 제거 </button></td>
+                        <script>
+                            id = '#';
+                            id = id + i;
+                            $(id).attr('src',ggim[i].img);
+                            console.log(ggim[i].ch_url);
+                            i += 1;
+                        </script>
+                    </tr>
+                  </table>
+            
+                  <script>
+                    $('#logout').click(function(){
+                                console.log('zzz');
+                                if(confirm('로그아웃 하시겠습니까?')){
+                                    var html = "";
+                                    uri = '/logout'
+                                    html += '<form name="dataForm" action="'+uri+'" method="post">';
+                                    html += '<input type="hidden" name="logout" value="logout" />';
+                                    html += '</form>';
+                                    
+                                    $("body").append(html);
+                                    document.dataForm.submit();
+                                }
+                    });
+                    $('#delete').click(function(){
+                        if (confirm("찜 목록에서 제거하시겠습니까?")) {
+                          var html = "";
+                          chch = $(this).val();
+                          uri = '/ggimErase'
+                          html += '<form name="dataForm" action="'+uri+'" method="post">';
+                          html += '<input type="hidden" name="ch_url" value="'+chch+'" />';
+                          html += '</form>';
+                          
+                          $("body").append(html);
+                          document.dataForm.submit();
+                        }
+                      });
+                  </script>
+                </td>
+            </tr>
+        </tbody>
     </table>
+    <!-- Main -->
+
+    <br>
+    <br>
+    <br>
+
+    
+
     <!--footer-->
+    <footer>
+      <br>
+      Copyright ⓒ 2021 team Galaticos. 모든 권리 보유. <br>
+      사업자 등록번호 : 120 81 71278 | 통신판매업신고번호 : 제 2021 - 서울중구 - 00961호 | <br>
+      대표이사 : KIMPARK JUNGSEO | 주소 : 서울특별시 중구 다동 88 | <br>
+      대표전화 : 010 - 3237 - 0219 | 팩스 : 02 - 490 - 7392 <br>
+  
+  
+      <svg viewbox="0 0 100 20">
+          <defs>
+            <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
+              <stop offset="5%" stop-color="#326384"/>
+              <stop offset="95%" stop-color="#123752"/>
+            </linearGradient>
+            <pattern id="wave" x="0" y="0" width="120" height="20" patternUnits="userSpaceOnUse">
+              <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)"> 
+                <animateTransform
+                    attributeName="transform"
+                    begin="0s"
+                    dur="1.5s"
+                    type="translate"
+                    from="0,0"
+                    to="40,0"
+                    repeatCount="indefinite" />
+              </path>
+            </pattern>
+          </defs>
+          <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="0.6">UFORA</text>
+          <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#gradient)" fill-opacity="0.1">UFORA</text>
+        </svg>
+        <div style="width:100vw; height: 30vh; display: flex; align-items: center; text-align:center;">
+          <div style="text-align:center; vertical-align: middle; margin: 0 auto;">
+              <table class="table_2">
+                  <FORM>
+                      <tr>
+                          <th align=center>[백엔드]</th>
+                          <th align=center>[데이터분석]</th>
+                          <th align=center>[데이터분석]</th>
+                          <th align=center>[프론트엔드]</th>
+                      </tr>
+                      <tr>
+                          <td align=center valign=top>
+                              박영상<br>
+                              010.3237.0219<br>
+                              dudtkd0219@gmail.com<br>
+                              </td>
+                              <td align=center valign=top>
+                                  정광의<br>
+                                  010.6788.1124<br>
+                                  jeongke26@naver.com<br>
+                              </td>
+                              <td align=center valign=top>
+                                  김태연<br>
+                                  010.7127.8378<br>
+                                  xodus0706@gmail.com<br>
+                              </td>
+                              <td align=center valign=top>
+                                  서예지<br>
+                                  010.6353.1401<br>
+                                  814askl@naver.com<br>
+                              </td>
+                      </tr>
+                  </FORM>
+              </table>
+          </div>
+      </div>
+  
+      <br>
+      <br>
+  </footer>
+  <!--footer-->
+
+  <script src="weather.js"></script>
 </body>
 </html>
