--- a/src/main/resources/templates/filterPage.html
+++ b/src/main/resources/templates/filterPage.html
@@ -221,7 +221,8 @@
           </div>
           <!-- 구독자 수 선택 -->
           <br>
-          &nbsp;&nbsp;&nbsp;<input type="submit" value="검색" />
+          <center><input TYPE="IMAGE" src="https://i.ibb.co/QcnSd4c/search-Button.png" onmouseover="this.src='https://i.ibb.co/smB0fq5/search-Button.png'" 
+            onmouseout="this.src='https://i.ibb.co/QcnSd4c/search-Button.png'" name="submit" value="submit"><center/>
         </form>
 			</td>
       <!---- 필터 ---->
