--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -155,6 +155,9 @@
                     <br>
                     <p align=Center size=9><img src="https://i.ibb.co/tXftLwj/Mypage.png"></p>
                     <br>
+                    &nbsp;&nbsp;&nbsp;<b th:text = "${CustomID}"></b>님 안녕하세요!
+                    <br>
+                    <br>
                     &nbsp;&nbsp;&nbsp;<strong>>> 찜 목록</strong>
                     <br>
                     <br>
